@@ -1,3 +1,8 @@
+2020-11-05  Niels Möller  <nisse@lysator.liu.se>
+
+	* ecc-dup-jj.c (ecc_dup_jj): Reduce scratch need.
+	* ecc-internal.h (ECC_DUP_JJ_ITCH): Now 4*size.
+
 2020-11-03  Niels Möller  <nisse@lysator.liu.se>
 
 	* ecc-dup-eh.c (ecc_dup_eh): Reduce scratch need.
